# streamlit_ai_showcase

./: .gitignore  README.md  requirements.txt  settings.yaml
.bmad-core/: install-manifest.yaml
agents_basics/: auto_gen_claude.py  auto_gen_qe_workflow_1.py  auto_gen_smoke.py  streamlit_autogen_agent.py
ai_image_gallery/: app.py
ai_testing_innovate/: test_planning_agent.py
artstorefront/: art-image-analysis-v2.py  art-image-analysis.py  file2893742.txt  readfile.py
aws_basics/: POSTGRES_CONNECTION.md  awss3_play1.py  vercel_postgresql.py
azure/: azure_open_ai_assistent.py  azure_resource_storage.py  open_ai_assistent_streamlit_chat.py  smoke_test_open_ai_azure_sdk.py
basics/: basics2.py  chat.py  chat_open_source.py  key_test.py  nvidia_mistrel.py  readme.md  stream_lit_basics.py  streamlit  together_ai_smoke.py
chatmodes-demo/: architect-mode-example-chat.md
crewai/: crew_sdlc_ai_langchain.py
elevenlabs/: elevenlabs_smoke.py  text_to_speech_aws.py  text_to_speech_local.py  text_to_speech_victor copy.py  text_to_speech_victor.py
ellevenlabs/: text_to_speech_local.py
ensembledatademo/: main.py  pyproject.toml  requirements.txt
eraserio/: cloud_arch_diagram_.py  cloud_arch_diagram_py  sequence_diagram.py  (+3 more)
openai/: call_open_ai_assistent.py  crewai_tooling_openai.py  eraser_io_assistant_openai.py  gradio_voice_app.py  image_editing.py  image_gen_ai_latest.py  image_generation_advanced.py  image_generation_basic.py  new_thread_open_ai_assistant.py  pyproject.toml  realtime_smoke_cli.py  realtime_ws_client.py  threads_open_ai_assistant.py  web_app.py
(+247 files in other folders)
